# ImageMetaCleaner

./: .gitignore  README.md  main.spec  pyproject.toml  run.bat  setup.cfg
image_meta_cleaner/: __init__.py  files_index.py  images.py  location.py  main.py  processing.py
tests/: __init__.py  conftest.py  test_images.py  test_location.py  test_main.py  test_processing.py
tests/assets/: .imc  1.json  3.json
